club settings pages, membership and applications client. DONE
