# backend/api/apps/clubs/repositories/membership/m_application_repo.py
@@ -4,7 +4,7 @@ from django.db.models import QuerySet
 from apps.clubs.models.membership.form.enums import ApplicationStatus
 from core.repositories import BaseRepository
 from apps.accounts.models import User
-from apps.clubs.models import MembershipApplication, Club, Membership
+from apps.clubs.models import MembershipApplication, Club, Membership, ApplicationStatus
 
 
 class MembershipApplicationRepository(BaseRepository[MembershipApplication]):
@@ -20,6 +20,11 @@ class MembershipApplicationRepository(BaseRepository[MembershipApplication]):
         return self.get_queryset().select_related("club", "applicant").get(
             club_id=club_id, pk=application_id
         )
+    
+    def get_membership_application_for_user(self, club: Club, applicant: User) -> MembershipApplication | None:
+        return self.get_queryset().filter(
+            club=club, applicant=applicant, status=ApplicationStatus.PENDING
+        ).first()
 
     def create_membership_application(self, club: Club, applicant: User, message: str) -> MembershipApplication:
         return self.create(club=club, applicant=applicant, message=message)
